@@ -1,6 +1,7 @@
 * unreleased - Marek Jędryka <jedryka89@gmail.com> - v2.8
     - Changed SIR to single instance application
     - Removed setting empty dcraw path string after browse cancel
+    - Fixed left arrow shortcut for previous image in PreviewDialog
 
 * unreleased - Marek Jędryka <jedryka89@gmail.com> - v2.7.3
     - Changed all occurrences of old SIR webpage URL
